--- a/GerenciadorEventos/Views/Gerenciar/GerarCracha.cshtml
+++ b/GerenciadorEventos/Views/Gerenciar/GerarCracha.cshtml
@@ -30,6 +30,7 @@
                             <td>
                                 <span style="font-size:25px;font-weight:bold;">@Model.evento.nome</span><br /><br />
                                 <img src="../Content/imagens/user.png" style="height:40px; width:40px;" />
+                                <span class="glyphicon glyphicon-user" style="font-size:170px;"></span>
                             </td>
                         </tr>
                         <tr style="background-color:black; color:white; width:300px; height:150px; text-align:center;">
