--- a/GerenciadorEventos/Views/Gerenciar/GerarCertificado.cshtml
+++ b/GerenciadorEventos/Views/Gerenciar/GerarCertificado.cshtml
@@ -56,7 +56,7 @@
                         </td>
                     </tr>
                     <tr style="background-color:black;text-align:center; margin:10px;">
-                        <td><p style="font-size:20px; margin-top:10px; color:white;">Certificado autêntico do site www.gerenciadordeeventosbr.azurewebsites.net</p></td>
+                        <td><p style="font-size:20px; margin-top:10px; color:white;">Certificado autêntico do site http://gerenciadordeeventosbr.azurewebsites.net</p></td>
                     </tr>
                 </table>
                 @*<div class="row" style="padding:0px;margin:0px;">
