--- a/GerenciadorEventos/Views/Gerenciar/GerarCracha.cshtml
+++ b/GerenciadorEventos/Views/Gerenciar/GerarCracha.cshtml
@@ -29,8 +29,7 @@
                         <tr style="height:220px; text-align:center;">
                             <td>
                                 <span style="font-size:25px;font-weight:bold;">@Model.evento.nome</span><br /><br />
-                                <img src="../Content/imagens/user.png" style="height:40px; width:40px;" />
-                                <span class="glyphicon glyphicon-user" style="font-size:170px;"></span>
+                                <img src="http://gerenciadordeeventosbr.azurewebsites.net/Content/imagens/user.png" style="height:100px; width:100px;" />
                             </td>
                         </tr>
                         <tr style="background-color:black; color:white; width:300px; height:150px; text-align:center;">
@@ -47,7 +46,7 @@
                         </tr>
                         <tr style="font-size:14px; font-weight:bold; height:70px; text-align:center;">
                             <td>
-                                <span>www.gerenciadordeeventosbr.azurewebsites.net</span>
+                                <span>http://gerenciadordeeventosbr.azurewebsites.net</span>
                             </td>
                         </tr>
                     </table>
